# VisArchPy

./: .gitignore  01pdf_extraction.ipynb  01pdf_metadata_extraction.ipynb  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  colab_test.ipynb  delete-files.sh  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  unit-tests.yml
data/: 00000_mods.xml  sample-pdfs.md
dinov2/scripts/: dino2_transformer.py
docs/: api-reference.rst  cli-reference.rst  conf.py  data-extraction.rst  devel.rst  extraction-pipelines.rst  index.rst  installation.rst  meta-reference.rst  quick-start.rst  requirements.txt  transform-pipelines.rst  transform-utility.rst  visual-utility.rst
docs/source/: conf.py  data-extraction.rst  index.rst
examples/: image_extraction.py  pdf_metadata_extraction.py  settings.py
src/aidapta/: __init__.py  analytics.py  captions.py  cli.py  config.yaml  file_pipeline.py  image.py  image_ocr_pipeline.py  image_orc_pipeline.py  image_pipeline.py  layout.py  layout_ocr_pipeline.py  layout_pipeline.py  metadata.py  ocr.py  py_cairo.py  pymu-pdf-dennis.py  pymu-pdf.py  utils.py
src/aidapta/dinov2/: transformer.py
src/aidapta/edge_detection/: test-iacv.py
src/aidapta/pipelines/: dinov2.py  layout.py  layout_ocr.py
src/tools/: metadata.py  pypdf2.py
src/visarchpy/: analytics.py  captions.py  cli.py  config.yaml  default-settings.json  layout.py  metadata.py  ocr.py  pdf.py  pipelines.py  utils.py
src/visarchpy/cli/: dino.py  layout.py  layout_ocr.py  main.py  ocr.py  settings.py  viz.py
src/visarchpy/dino/: transformer.py
src/visarchpy/dinov2/: transformer.py
src/visarchpy/edge_detection/: detection.py  iacv.py
src/visarchpy/models/: __init__.py  kmeans_bbox20.pkl
src/visarchpy/pipelines/: dinov2.py  layout.py  layout_ocr.py  ocr.py  pipelines.py
test/: test-pypdf2.py
tests/: test_analytics.py  test_captions.py  test_metadata.py  test_ocr.py  test_pdf.py  test_pipelines.py  test_pypdf2.py  test_transformer.py  test_utils.py
tests/data/: sample-mods.xml
tools/: metadata.py  pymu-pdf.py  pypdf2.py
