[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visarchpy"
version = "1.0.0"
authors = [
    {name = "Manuel Garcia", email = "m.g.garciaalvarez@tudelft.nl"},
]
description = "Data pipelines for extraction and visual analysis of architectural visuals in Python."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["data pipelines", "visuals", "architecture",
            "pdf", "ETL", "computer vision", "dino", "TU Delft"]
license = {text = "MIT"}
classifiers = ["Development Status :: 5 - Production/Stable",
 "Environment :: Python",
 "Intended Audience :: Science/Research",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3",
 "Environment :: Console",
 "Framework :: Pytest",
 "License :: OSI Approved :: MIT License"
]
dependencies = [
    "Pillow",
    "requests",
    "pdfminer.six[image]",
    "beautifulsoup4",
    "shapely",
    "pandas",
    "pymods",
    "tqdm",
    "pdf2image",
    "pytesseract",
    "matplotlib",
    "typer",
    "transformers",
    "scikit-learn",
]

[project.optional-dependencies]
  dev = [
    "pytest",
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-bibtex>=2.5.0",
    "sphinx-copybutton==0.5.2",
    "nbsphinx>=0.9.2",
  ]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[project.scripts]
visarch = "visarchpy.cli.main:app"

